--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,11 @@
       <div class="form-inputs">
 
       <div class="form-group">
+        <%= form.label :name %>
+        <%= form.text_field :name, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
         <%= form.label :email %>
         <%= form.email_field :email, class: "form-control", :autofocus => true %>
       </div>
