--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,10 @@
     <% end %>
 
       <div id="content" class="col-md-9 center-block">
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
         <%= yield %>
       </div>
     </div>
