--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,8 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |form| %>
   <%= devise_error_messages! %>
 
+@user.avatar.attach(params[:avatar])
+
   <div class="panel panel-default">
     <div class="panel-body">
 
